--- a/config.yaml
+++ b/config.yaml
@@ -42,3 +42,12 @@ central_bank:
 
 simulation:
   periods: 20
+
+initial_state:
+  period: 0
+  output: 680.0
+  inflation: 0.02
+  unemployment: 0.05
+  interest_rate: 0.025
+  wage: 4.35
+  price_level: 1.0
